k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm
  namespace: localghost
spec:
  selector:
    app: sm
  ports:
    - port: 80
      targetPort: 8080
      name: http
