k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm
  namespace: localghost
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: localghost-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: sm.localghost.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sm
                port:
                  number: 80
  tls:
    - hosts:
        - sm.localghost.com
      secretName: sm-tls
